# timepoint-pro

./: .coverage 2  .env.example  .gitignore  .pytest_summary.txt  2025-2026-hunting-guide.md  AGENTS.md  ALL_TESTS_FIXED.md  ANDOS-PLAN.md  APPLICATION_FIXES.md  ARCHITECTURE-PLAN.md  CHANGE-ROUND.md  CLAUDE.md  CLEANUP.md  CLEANUP_PLAN.md  CONSOLIDATION_COMPLETE.md  CURRENT_STATE_ANALYSIS.md  DOCUMENTATION_INDEX.md  ERRORS_FIXED.md  EXAMPLE_DIALOGS.md  EXAMPLE_RUN.md  FINAL_TEST_FIXES.md  FRONT-END-SPEC.md  HANDOFF-PROMPT.md  HANDOFF.md  IMPROVEMENT_PLAN_FEB13.md  INDEX.md  LICENSE  LLM-ENHANCEMENTS-COMPLETE.md  LLM-FUNCTION-COVERAGE-TABLE.md  LLM-INTEGRATION-PLAN.md  LLM-SERVICE-INTEGRATION-COMPLETE.md  LLM-SERVICE-MIGRATION.md  LLM-SERVICE-QUICKSTART.md  LLM-SERVICE-SUMMARY.md  MECHANICS.md  MECHANISM_COVERAGE_STRATEGY.md  MIGRATION.md  MILESTONES.md  ORCHESTRATOR_DOCUMENTATION.md  ORCHESTRATOR_INTEGRATION_COMPLETE.md  (+154 more)
.claude/: PERMISSIONS.md  settings.json
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
access/: __init__.py  audit.py  permissions.py
andos/: __init__.py  layer_computer.py
api/: __init__.py  auth.py  batch_runner.py  client.py  deps.py  main.py  mcp_server.py  models.py  models_batch.py  models_simulation.py  simulation_runner.py  usage_bridge.py  usage_storage.py
archive/: HANDOFF.md  INTEGRATION-ANALYSIS.md  PHASE_11_VALIDATION.md  RUNNER.md  criticism-response.md
autoresearch/: __init__.py  config_space.py  metrics.py  pareto.py  pro_autoresearch.py
checkpoints/: query_evolution_test_latest_checkpoint_0.json  query_evolution_test_latest_metadata.json
claude-sandbox/: Dockerfile  run.sh
conf/: config.yaml
dashboards/: README.md  _quarto.yml  analytics.qmd  convergence.qmd  home.qmd
docs/: COMPS.md  VISION.md  timepoint-suite-ref.md
e2e_workflows/: __init__.py  e2e_runner.py
evaluation/: __init__.py  convergence.py
examples/: demo_ai_entity.py  demo_orchestrator.py  llm_service_demo.py  oxen_branch_management.py  oxen_finetune_workflow.py  portal_presidential_election.py  sample_training_data.jsonl
generation/: __init__.py  checkpoint_manager.py  config_schema.py  fault_handler.py  horizontal_generator.py  resilience_orchestrator.py  vertical_generator.py  world_manager.py
llm_service/: __init__.py  call_logger.py  config.py  error_handler.py  model_selector.py  prompt_manager.py  provider.py  response_parser.py  security_filter.py  (+1 more)
(+635 files in other folders)
